# tuik-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  bot.sh  categories.yaml  docker-compose.yml  istatistiksel.html  pyproject.toml  run.sh  run_config.sh  run_keyword.sh
app/: main.py
app/core/: config.py  db.py
app/models/: category.py  dataset.py  observation.py
config/: bulten.yaml  bulten_search.yaml  categories.yaml  crawl.yaml  downloads.yaml  keywords.yaml
downloads/konut/: 1GmOz9tGmXiGhIKWjkNi9lvNDp1r0KUNalLtW1u9UyutJwSFZGcbqih5Oe4djdCB.xls  3XUMvMS2k8CFuJa2Q5BQQugi.xls  4dm3I7QjsSyg0KRlUY8qGC6m9HSw180Nu1JKUuiCv8NNB8amwXc6C0MopWGePP9N.xls  5uGjxkfA3rzAcNd3MS.xls  (+31 more)
scripts/: bulten_collect.py  bulten_download_collect.py  bulten_keyword_search.py  capture_datatable_request.py  capture_istatistiksel_datatable.py  capture_network.py  crawl_all_tables.py  crawl_from_config.py  create_tables.py  debug_category_page.py  discover_bultens_playwright.py  download_from_crawl_yaml.py  dump_istatistiksel_html.py  extract_bulten_all.py  extract_bulten_links_click.py  extract_bulten_links_playwright.py  fetch_categories.py  find_datatables_ajax.py  init_db.py  inspect_bundle.py  load_observations.py  normalize_excel.py  normalize_from_manifest.py  parse_istatistiksel_tablolar.py  print_from_config.py  seed_categories.py  seed_datasets.py  test_bulten_extract.py  test_get_istatistiksel_tablolar.py  test_get_veri_sayilari.py  test_load_istatistiksel_tablolar.py  test_veri_sayilari.py  tuik_portal_keyword_search.py  tuik_site_keyword_search.py  tuik_yaml_keyword_search.py
(+56 files in other folders)
