[tool.poetry.dependencies]
python = "^3.11"

fastapi = "0.115.6"
uvicorn = { extras = ["standard"], version = "0.32.1" }
sqlalchemy = "2.0.36"
psycopg2-binary = "2.9.10"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
httpx = "0.28.1"
python-dotenv = "1.0.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
playwright = "^1.57.0"
pyyaml = "^6.0.3"
[tool.poetry]
package-mode = false
